--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <li>Servir bien caliente y disfrutar en familia.</li>
     </ol>
 
+<a href="otro.html">ir a otra página</a>
+    
 </div>
 </body>
 </html>
